# cashflow

./: .gitignore  Cargo.toml  compose.yaml  deno.json
prisma/: Cargo.toml  schema.prisma
src/: auth.rs  config.rs  env.rs  main.rs  main.ts  routes.rs
src/auth/: hash.rs  jwt.rs  lock_route.rs  mod.rs
src/errors/: mod.rs  server_error.rs
src/formatters/: mod.rs  phone_number.rs
src/io/: README.md  mod.rs  status.rs
src/io/input/: README.md  phone_number.rs
src/io/output/: README.md  error.rs  mod.rs  success.rs
src/middleware/: cors.rs  logger.rs  mod.rs  trailing_slash.rs
src/parsers/: mod.rs  phone_number.rs
src/response/: mod.rs  success.rs
src/routes/: analyze.rs  setup_institution.rs
src/routes/auth/: login.rs  mod.rs  signup.rs
src/routes/customer/: analyze.rs  mod.rs
src/services/: mod.rs
src/services/plaid/: create_link_token.rs  mod.rs
src/services/twilio/: mod.rs
