[package]
name = "cashflow"
version = "0.1.0"
edition = "2021"
default-run = "cashflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
futures = { version = "0.3.28" }
