[package]
name = "cashflow"
version = "0.1.0"
edition = "2021"
default-run = "cashflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-cors = "0.6.4"
futures = { version = "0.3.28" }
jsonwebtoken = "7.1.0"
dotenv = "0.15.0"
chrono = "0.4.11"
envy = "0.4"
lazy_static = "1.4.0"
argon2rs = "0.2.5"
tokio = "1.28.0"
actix-rt = "2.8.0"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["std", "serde"] }
prisma = { path = "./prisma" }
twilio = "1.0.2"
reqwest = { version = "0.11.17", features = ["json"] }


[workspace]
resolver = "2"
members = [
  "prisma"
]
